--- a/oceanusex/pom.xml
+++ b/oceanusex/pom.xml
@@ -2,13 +2,11 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>com.mdeng</groupId>
-		<artifactId>parent</artifactId>
+		<groupId>com.ymssdeng</groupId>
+		<artifactId>basis-parent</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
-	<groupId>com.mdeng</groupId>
-	<artifactId>oceanusex</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<artifactId>basis-oceanusex</artifactId>
 
 	<dependencies>
 		<dependency>
